syntax = "proto3";

package onight.zjfae.afront.gens;

//Generated By BrewRobot:Tue Apr 19 02:41:46 CST 2016

message PBIFE_prdtransferquery_prdQueryDeliveryOrderForDetail{
	///ife/prdtransferquery/prdQueryDeliveryOrderForDetail.html
	message TcDeliveryOrderList{
		string deliveryType = 1;
		string productCode = 2;
		string productName = 3;
		string amount = 4;
		string amountStr = 5;
		string amountZh = 6;
		string deliveryNum = 7;
		string deliveryNumZh = 8;
		string extraCost = 9;
		string extraCostStr = 10;
		string companyName = 11;
		string cashAccount = 12;
		string fixtureDate = 13;
		string fixtureDateFmt = 14;
		string delegationId = 15;
		string saleType = 16;
		string tradeAccount = 17;
		string buyerName = 18;
		string gmtCreate = 19;
		string gmtModify = 20;
		string deliveryCode = 21;
		string unitAmount = 22;
		string transferFee = 23;
		string useFavorableAmount = 24;
		string dealStatus = 25;
		string errorInfo = 26;
		string optTradeAccount = 27;
		string saleName = 28;
		string optCashAccount = 29;
		string brokerNo = 30;
		string channelNo = 31;
		string brokerCode = 32;
		string tradeIncome = 33;
		string saleDeliveryCode = 34;
		string expectedMaxAnnualRate = 35;
		string targetRate = 36;
		string actualRate = 37;
		string delegateTime = 38;
		string userTimes = 39;
		string startTime = 40;
		string endTime = 41;
		string productCodeOrName = 42;
	}


	repeated TcDeliveryOrderList tcDeliveryOrderList = 1;

	string mapAmount = 2;


}