syntax = "proto3";

package onight.zjfae.afront.gens;

//Generated By BrewRobot:Tue Apr 19 02:41:46 CST 2016

message PBIFE_trade_queryTransferSellProfits{
	///ife/trade/queryTransferSellProfits.html

	string transferIncome = 1;

	string floatingProfit = 2;

	string amount = 3;

	string extraCost = 4;

	string targetRate = 5;


}